# database-stream-processor

./: .gitignore  Cargo.toml  Dockerfile  Earthfile  README.md  docker.sh
.github/workflows/: main.yml
SQL-compiler/: pom.xml
adapters/: Cargo.toml
adapters/examples/: server.rs
adapters/src/: lib.rs
adapters/static/: dbsp.ts  errReporter.ts
benches/: fraud.rs  galen.rs
benches/gdelt/: data.rs  main.rs  personal_network.rs
benches/ldbc-graphalytics/: data.rs  main.rs  pagerank.rs
benches/nexmark/: config.rs  generator.rs  main.rs  model.rs  nexmark_dbsp_source.rs
crates/pipeline_manager/: Cargo.toml
crates/webui-tester/: Cargo.toml
demo/: demo.sh
demo/demo_notebooks/: fraud_detection.ipynb
demo/kind-deploy/: Dockerfile  login.sh  setup.sh
demo/project_TimeSeriesEnrich/: prepare.sh
demo/project_demo01-TimeSeriesEnrich/: prepare.sh
demo/project_demo03-GreenTrip/: large.yaml  prepare.sh
demo/project_green_trip/: project.sql
demo/project_null/: prepare.sh
deploy/: Dockerfile  README.md  start_manager.sh
doc/: self_hosted_ci_config.md
doc/spec/: .gitignore  Makefile  extensions.tex  implementation.tex  main.bib  main.tex  recursive.tex  related.tex  (+2 more)
pipeline_manager/: Cargo.toml  Makefile.toml
pipeline_server/: Cargo.toml  config.yaml  create_db.sql  delete_project.sh  grafana_dashboard.json  new_config.sh  new_pipeline.sh  new_project.sh
pipeline_server/src/: compiler.rs  config.rs  db.rs  main.rs  runner.rs
pipeline_server/static/: dbsp-project.ts
scripts/: start_manager.sh  swap_dbsp.sh
src/: lib.rs
tools/: pre-push
(+244 files in other folders)
